--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ lib/
 lib64/
 parts/
 sdist/
+src/
 var/
 wheels/
 *.egg-info/
@@ -102,3 +103,7 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+
+# pycharm
+*/.idea/**
+.idea/**
