--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,4 @@ dash-html-components
 dash-table
 flask
 
--e git+https://github.com/materialsintelligence/matscholar.git@dev#egg=matscholar
+-e git+https://github.com/materialsintelligence/matscholar.git@master#egg=matscholar
