--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,4 @@ matplotlib
 gunicorn
 
 -e git://github.com/vtshitoyan/dash-materialsintelligence#egg=dash_materialsintelligence
-git+git://github.com/materialsintelligence/matscholar@master#egg=matscholar 
+git+git://github.com/materialsintelligence/matscholar.git#egg=matscholar
