--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
-dash
-dash-core-components
-dash-html-components
-dash-table
+dash==0.39.0
+dash-core-components==0.44.0
+dash-html-components==0.14.0
+dash-renderer==0.20.0
+dash-table==3.6.0
+plotly==3.4.2
+
 flask
 matplotlib
 gunicorn
