--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,4 @@ pandas
 
 -e git://github.com/vtshitoyan/dash-materialsintelligence#egg=dash_materialsintelligence
 -e git+https://github.com/materialsintelligence/matscholar.git#egg=matscholar
+-e git+https://github.com/materialsintelligence/matscholar-core.git#egg=matscholar_core
