use pretty formula for summary; fix bug connecting summary to search app

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ flask
 matplotlib
 gunicorn
 pandas
+pymatgen
 
 -e git://github.com/vtshitoyan/dash-materialsintelligence#egg=dash_materialsintelligence
 -e git+https://github.com/materialsintelligence/matscholar.git#egg=matscholar
