--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ matplotlib
 gunicorn
 pandas
 pymatgen
+yaml
 
 -e git://github.com/vtshitoyan/dash-materialsintelligence#egg=dash_materialsintelligence
 -e git+https://github.com/materialsintelligence/matscholar.git#egg=matscholar
