--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ matplotlib
 gunicorn
 pandas
 pymatgen
-yaml
+pyyaml
 
 -e git://github.com/vtshitoyan/dash-materialsintelligence#egg=dash_materialsintelligence
 -e git+https://github.com/materialsintelligence/matscholar.git#egg=matscholar
