--- a/requirements.txt
+++ b/requirements.txt
@@ -15,4 +15,4 @@ pyyaml
 dash_elasticsearch_autosuggest==0.3.0
 
 -e git://github.com/vtshitoyan/dash-materialsintelligence#egg=dash_materialsintelligence
--e git+https://github.com/materialsintelligence/matscholar.git#egg=matscholar
+-e git+https://github.com/materialsintelligence/matscholar.git/search-integration#egg=matscholar
