--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,18 @@
-dash==0.39.0
-dash-core-components==0.44.0
-dash-html-components==0.14.0
+dash==1.1.1
 dash-auth==1.3.2
-dash-renderer==0.20.0
-dash-table==3.6.0
-plotly==3.4.2
+dash-core-components==1.1.1
+dash-elasticsearch-autosuggest==0.3.0
+dash-html-components==1.0.0
+-e git://github.com/vtshitoyan/dash-materialsintelligence@1b66c2ddb9056f1265b330e094b314f4ea4dd308#egg=dash_materialsintelligence
+dash-renderer==1.0.0
+dash-table==4.1.0
 
+plotly
 flask
 matplotlib
 gunicorn
 pandas
 pymatgen
 pyyaml
-dash_elasticsearch_autosuggest==0.3.0
 
--e git://github.com/vtshitoyan/dash-materialsintelligence#egg=dash_materialsintelligence
 -e git+https://github.com/materialsintelligence/matscholar.git@search_integration#egg=matscholar
