--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ exclude = .git
 # E731: do not assign a lambda expression, use a def
 # W503: line break before binary operator
 # C901: function is too complex
-ignore = E731, W503, C901
+ignore = E731, W503, C901, E501
 
 # Make isort play nicely with black's import formatting.
 # https://github.com/microsoft/vscode-python/issues/5840
