--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,7 @@ jobs:
 
       # Download and cache dependencies
       - restore_cache:
-          keys:
+          keys:1
             - v1-dependencies-{{ checksum "requirements_dev.txt" }}
             # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
