--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
             . test_env/bin/activate
             pip install -q --upgrade pip
 
-            pip install -e . -r requirements.txt
+            pip install --quiet -e . -r requirements.txt
             python setup.py test
           no_output_timeout: 10m
 
