--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-dash==1.1.1
+dash-1.6.1
+dash-core-components-1.5.1
+dash-html-components-1.0.2
+dash-renderer-1.2.1
+dash-table-4.5.1
 dash-auth==1.3.2
-dash-core-components==1.1.1
 dash-elasticsearch-autosuggest==1.1.0
-dash-html-components==1.0.0
-dash-renderer==1.0.0
-dash-table==4.1.0
 pymatgen==2019.9.8
 flask==1.1.1
 Flask-Caching==1.7.2
