--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-dash-1.6.1
-dash-core-components-1.5.1
-dash-html-components-1.0.2
-dash-renderer-1.2.1
-dash-table-4.5.1
+dash==1.6.1
+dash-core-components==1.5.1
+dash-html-components==1.0.2
+dash-renderer==1.2.1
+dash-table==4.5.1
 dash-auth==1.3.2
 dash-elasticsearch-autosuggest==1.1.0
 pymatgen==2019.9.8
