--- a/requirements.txt
+++ b/requirements.txt
@@ -3,13 +3,14 @@ dash-core-components==1.5.1
 dash-html-components==1.0.2
 dash-renderer==1.2.1
 dash-table==4.5.1
-dash-auth==1.3.2
-dash-elasticsearch-autosuggest==1.1.0
+dash-auth==1.3.
 pymatgen==2019.9.8
 flask==1.1.1
 Flask-Caching==1.7.2
 gunicorn==19.9.0
 pandas==0.25.1
+dash-elasticsearch-autosuggest==2.2.0
+
 
 -e git+https://github.com/materialsintelligence/matscholar.git#egg=matscholar
 
