--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ dash-core-components==1.5.1
 dash-html-components==1.0.2
 dash-renderer==1.2.1
 dash-table==4.5.1
-dash-auth==1.3.
+dash-auth==1.3.2
 pymatgen==2019.9.8
 flask==1.1.1
 Flask-Caching==1.7.2
